# study_python

./: .env.example  .gitignore  README.md  ai_bot.py  chroma_demo.py  chroma_real.py  database.py  dual_storage_demo.py  embedding_playground.py  local_embedding.py  main.py  models.py  pyproject.toml  rag_demo.py  rag_test.py  reasonix.toml  requirements.txt  skills-lock.json  test.txt
.codegraph/: daemon.pid
.reasonix/: desktop-topic-auto-title-meta.json  desktop-topic-title-sources.json  desktop-topic-titles.json
alembic/: env.py
app/: ai_safety.py  database.py  embedding.py  lang_graph.py  langchain_history.py  main.py  models.py
md/: 00_环境配置与PyCharm使用.md  01_Python基础.md  02_Python进阶.md  03_Python高级特性.md  04_FastAPI基础.md  05_FastAPI_CRUD.md  06_FastAPI_ORM_SQLAlchemy.md  07_代码分层与模块化架构.md  08_提示词工程与聊天记忆.md  09_RAG_向量数据库入门.md  10_RAG_ChromaDB向量数据库实战.md  11_双存储架构SQLite_ChromaDB.md  12_FastAPI_Chroma_最小原型.md  13_RAG_闭环_检索到回答.md  14_上下文窗口管理.md  15_LangChain核心概念.md  16_roadmap查缺补漏计划.md  16_异步编程深入.md  17_JWT用户认证.md  18_WebSocket实时通信.md  19_Alembic数据库迁移.md  20_pytest单元测试.md  21_Prompt_Engineering进阶.md  22_AI安全与伦理.md  23_RAG_Chunking策略.md  24_RAG_评估与指标.md  25_AI_Agents基础.md  26_Function_Calling执行Loop.md  27_LangChain对话记忆.md  28_LangChain_Agent工具调用.md  29_LangGraph状态工作流.md  30_Dify平台实战.md  31_Multi-Agent与复杂工作流.md  32_HuggingFace生态.md  README.md  错题本.md
memory/: FACT.md  JOURNAL.jsonl
playground/: chroma_real.py  embedding_playground.py  rag_test.py
python第一月上半学习阶段/: py_CRUD.py  python_接触fastapi之前的补充.py  py学习_进阶.py
routers/: __init__.py  ai_router.py  auth_router.py  chat_memory.py  langchain_rag_router.py  prompt_advanced_router.py  rag_router.py  todos_routers.py  ws_router.py
test/: conftest.py  test_auth.py  test_fun.py  test_prompt_advanced.py  test_rag.py  test_router.py  test_sse.py  test_ws.py
tests/: conftest.py  test_auth.py  test_fun.py  (+5 more)
(+219 files in other folders)
