[project]
name = "study-python"
version = "0.1.0"
description = "ADHD-friendly Python to AI full-stack learning project (FastAPI + RAG + LangChain + JWT + WebSocket + pytest)"
authors = [
    {name = "enkidu",email = "enkidu7493@foxmail.com"}
]
requires-python = ">=3.11,<4.0.0"
dependencies = [
    "annotated-doc (==0.0.4)",
    "annotated-types (==0.7.0)",
    "anyio (==4.12.1)",
    "certifi (==2026.2.25)",
    "click (==8.1.8)",
    "distro (==1.9.0)",
    "exceptiongroup (==1.3.1)",
    "fastapi (==0.128.8)",
    "h11 (==0.16.0)",
    "httpcore (==1.0.9)",
    "httpx (==0.28.1)",
    "idna (==3.11)",
    "jiter (==0.14.0)",
    "markdown-it-py (==3.0.0)",
    "mdurl (==0.1.2)",
    "openai (==2.31.0)",
    "pydantic (==2.12.5)",
    "pydantic-core (==2.41.5)",
    "pygments (==2.20.0)",
    "rich (==14.3.3)",
    "sniffio (==1.3.1)",
    "sqlalchemy (==2.0.49)",
    "starlette (==0.49.3)",
    "tqdm (==4.67.3)",
    "typing-inspection (==0.4.2)",
    "typing-extensions (==4.15.0)",
    "uvicorn (==0.39.0)",
    "numpy (>=2.4.6,<3.0.0)",
    "chromadb (>=1.5.9,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "tiktoken (>=0.13.0,<0.14.0)",
    "langchain-deepseek (>=1.0.1,<2.0.0)",
    "sentence-transformers (>=5.5.1,<6.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "pyjwt (>=2.13.0,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "langgraph (>=1.2.9,<2.0.0)"
]

[tool.poetry]
package-mode = false

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"
priority = "primary"

[tool.pyright]
typeCheckingMode = "basic"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)"
]

[tool.pytest.ini_options]
pythonpath = ["."]
